--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fondamento&family=Roboto+Condensed:wght@300&family=Roboto:wght@100;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fondamento&family=Roboto+Condensed&family=Roboto:wght@100;700&display=swap');
 
 * {
     margin: 0;
@@ -50,8 +50,8 @@ img {
     margin-right: 10px;
     text-align: start;
     h2 {
-        padding: 0 15px;
-        font-size: 34px;
+        padding: 5px 15px 0;
+        font-size: 33.5px;
         border-top: 2px solid black;
         border-bottom: 2px solid black;
         font-family: 'Roboto Condensed', sans-serif;
@@ -62,6 +62,8 @@ img {
         padding: 10px 0;
         p {
             font-size: 9px;
+            line-height: 11px;
+            font-weight: 500;
         }
 
         .p1 {
@@ -76,7 +78,7 @@ img {
 
 .image {
     p {
-        font-size: 9px;
+        font-size: 10px;
         margin-top: 5px;
         text-align: start;
     }
